--- a/bin/install
+++ b/bin/install
@@ -7,6 +7,7 @@ system('rm -f /etc/init.d/'.$SERV_NAME);
 
 $content=file_get_contents('./ssp-serv');
 $content=str_replace('{SSP_DIR}',dirname(__FILE__),$content);
+$content=str_replace('{SERV_NAME}',$SERV_NAME,$content);
 file_put_contents('/etc/init.d/'.$SERV_NAME,$content);
 
 system('chmod 773 /etc/init.d/'.$SERV_NAME);
